--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./css/style.css">
-    <title>TEST</title>
+    <title>portpolio</title>
   </head>
   <body>
     김규범
